Toolbar z-index fix

--- a/src/ui/Editor/toolbar.scss
+++ b/src/ui/Editor/toolbar.scss
@@ -18,7 +18,7 @@
 
   .medium-editor-toolbar-active {
     opacity: 1;
-    z-index: 0;
+    z-index: 100;
   }
 
   .medium-editor-toolbar-form {
